--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.0",
     "mongoose": "^8.10.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "stream-throttle": "^0.1.3"
   },
   "devDependencies": {
     "wrangler": "^3.80.4"
