--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Prateek Veerbhan",
   "license": "ISC",
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^1.7.9",
     "backend": "file:",
     "cors": "^2.8.5",
@@ -17,8 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.0",
     "mongoose": "^8.10.1",
-    "nodemon": "^3.1.7",
-    "stream-throttle": "^0.1.3"
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
     "wrangler": "^3.80.4"
